--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Transform .gitignore to .dockerignore Online</title>
+    <title>M2GA - Transform Jenkinsfile to Github Action</title>
   	<link id="external-css" rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Fira+Code&amp;display=swap" media="all">
 </head>
 
